--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,17 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+html {
+    min-height: 100%;
+}
+
+body {
+    min-height: 100%;
+    font-family: "Bellefair", serif;
+    transition: all .3s;
+}
+
+#root {
+    min-height: 100%;
+}
