--- a/src/styles/Destination.css
+++ b/src/styles/Destination.css
@@ -1,17 +1,19 @@
 .destinationBgImg {
-    background-image: url('../assets/destination/background-destination-desktop.jpg');
-    background-size: cover;
+    background-image: url('/assets/destination/background-destination-desktop.jpg');
+    background-size: 100% 100%;
+    min-height: 100vh;
+    overflow: hidden;
 }
 @media (max-width: 768px) {
     .destinationBgImg {
-        background-image: url('../assets/destination/background-destination-tablet.jpg');
-        background-size: cover;
+        background-image: url('/assets/destination/background-destination-tablet.jpg');
+        background-size: 100% 100%;
     }
 }
 
 @media (max-width: 375px) {
     .destinationBgImg {
-        background-image: url('../assets/destination/background-destination-mobile.jpg');
-        background-size: cover;
+        background-image: url('/assets/destination/background-destination-mobile.jpg');
+        background-size: 100% 100%;
     }
 }
