--- a/src/styles/Crew.css
+++ b/src/styles/Crew.css
@@ -1,17 +1,19 @@
 .crewBgImg {
-    background-image: url('../assets/crew/background-crew-desktop.jpg');
-    background-size: cover;
+    background-image: url('/assets/crew/background-crew-desktop.jpg');
+    background-size: 100% 100%;
+    min-height: 100vh;
+    overflow: hidden;
 }
 @media (max-width: 768px) {
     .crewBgImg {
-        background-image: url('../assets/crew/background-crew-tablet.jpg');
-        background-size: cover;
+        background-image: url('/assets/crew/background-crew-tablet.jpg');
+        background-size: 100% 100%;
     }
 }
 
 @media (max-width: 375px) {
     .crewBgImg {
-        background-image: url('../assets/crew/background-crew-mobile.jpg');
-        background-size: cover;
+        background-image: url('/assets/crew/background-crew-mobile.jpg');
+        background-size: 100% 100%;
     }
 }
