Implement the Technology component while also style the crew component and worked on the nav-ul-list  on media query and setup the img path for techology array on data.json

--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -80,6 +80,7 @@ header {
         padding-top: 8rem;
         padding-left: 1rem;
         animation: left .3s;
+        z-index: 1;
     }
     @keyframes left {
         from{left: 100%}
