--- a/src/styles/Crew.css
+++ b/src/styles/Crew.css
@@ -4,6 +4,10 @@
     min-height: 100vh;
     overflow: hidden;
 }
+.hover:hover {
+    background-color: #fff;
+    transition: background-color .3s;
+}
 @media (max-width: 768px) {
     .crewBgImg {
         background-image: url('/assets/crew/background-crew-tablet.jpg');
