--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ html {
 
 body {
     min-height: 100%;
-    font-family: "Bellefair", serif;
+    font-family: "Barlow Condensed", sans-serif;
     transition: all .3s;
 }
 
