--- a/src/styles/Crew.css
+++ b/src/styles/Crew.css
@@ -4,6 +4,9 @@
     min-height: 100vh;
     overflow: hidden;
 }
+.crewImg {
+    display: block;
+}
 .hover:hover {
     background-color: #fff;
     transition: background-color .3s;
@@ -12,6 +15,9 @@
     .crewBgImg {
         background-image: url('/assets/crew/background-crew-tablet.jpg');
         background-size: 100% 100%;
+    }
+    .crewContainer {
+        margin: 0 1rem;
     }
 }
 
