--- a/src/styles/Outlet.css
+++ b/src/styles/Outlet.css
@@ -13,6 +13,11 @@
         column-gap: 3rem;
     }
 }
+@media (max-width: 768px) {
+    .outlet {
+        margin: 0 1rem;
+    }
+}
 
 .outlet {
     animation: opacity 2s;
